fix adaptive menu

--- a/dev/static/stylus/modules/header/header.styl
+++ b/dev/static/stylus/modules/header/header.styl
@@ -118,31 +118,7 @@
     top: calc(50% - 10px);
   &__burger-btn span:nth-of-type(3) 
     top: calc(50% + 10px);
-
-  &__burger-menu
-    display none
-    @media $lg-and-smaller
-      display block
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%
-    padding: 30px;
-    background: #FFEFBA;
-    transform: translateX(-100%);
-    transition: transform 0.5s;
-    z-index 2
-    .nav__item
-      padding-bottom 10px
-        
-    .nav__link
-      font-size: 25px
-      color #FF6B00
-        
-  &__burger-menu.active 
-	  transform: translateX(0);
-
+  
   &__burger-btn.active span:nth-of-type(1) 
     display: none;
 
@@ -154,20 +130,21 @@
     top: 50%;
     transform: translate(-50%, 0%) rotate(-45deg);
 
-
 .container
   position relative
 
+.container__menu.active 
+	  transform: translateX(0%);
 .container__menu
   width: 100%
   position absolute
   top 170px
-  left 50%
-  transform: translateX(-50%)
+  left 0%
+  transform: translateX(-100%)
   @media $lg-and-smaller
     display block
     top 0
-    left 50%
+    left 0%
     position: absolute
     background-color: #FFEFBA
     height 500px
@@ -197,6 +174,8 @@
       color: baseWhite
       position: relative
       transition all .3s ease
+      @media $lg-and-smaller
+        color #FF6B00
       &:hover
         color #FF6B00
         &::after
@@ -213,3 +192,5 @@
         border-radius: 3px
         background-color: baseWhite
         transition all .3s ease
+        @media $lg-and-smaller
+          display: none
